Переписал на MVVM

--- a/app/src/main/res/layout/card_event.xml
+++ b/app/src/main/res/layout/card_event.xml
@@ -163,7 +163,7 @@
             app:layout_constraintTop_toBottomOf="@id/link" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/people"
+            android:id="@+id/participate"
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
